# windowed-editor

./: Cargo.toml  index.html
src/: drag_container.rs  drag_content.rs  draggable.rs  effect-shader.wgsl  file_input.rs  image_mgmt.rs  image_panel.rs  main.rs  text_panel.rs  ui_panel.rs
styles/: styles.css
