[package]
name = "dioxus-draggable-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "fermi"] }
wasm-bindgen = "0.2"
js-sys = "0.3.59"

async-timer = "1.0.0-beta.8"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "DomRect",
    "File",
    "FileList",
    "HtmlInputElement",
    "Url",
    "CssStyleDeclaration",
    "HtmlElement",
    
] }

log = "0.4"
wasm-logger = "0.2.0"

bytemuck = { version = "1.4", features = ["derive"] }
wgpu = { version = "0.13", features = ["webgl"]}
futures-intrusive = "0.5.0"
image = "0.24.5"